deploy: 25168acfee55f1e813e3555d364f53105aad9319

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ objects with a map to string function, and returns elements matching the query.<
 </li>
 </ul>
 </details>
-<!-- /toc -->
+<!-- tocstop -->
 
 <hr>
 <a id="md:example-results" class="tsd-anchor"></a><h2><a href="#md:example-results">Example results</a></h2><p><strong>Input:</strong> <code>orange OR &quot;golden apple&quot;</code></p>
