deploy: 1370c65660dc2720a856515b3eb8da39705f7c06

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <h2>search-parse - v1.0.0</h2></div>
 <div class="tsd-panel tsd-typography"><h1>Search Query AST Parser for JS</h1>
 
+<p><a href="https://www.npmjs.com/package/search-parse">NPM</a> |
+<a href="https://chenasraf.github.io/search-ast-parser-js">Documentation</a></p>
 <p>This is a package for JS applications that parses search queries with the common search operator
 features such as logical or/and, grouping, phrases (in quotes), etc.</p>
 <p>This package only implements a very simple <code>filter</code> utility function that takes a list of items or
